--- a/index.html
+++ b/index.html
@@ -6,4 +6,10 @@
   </head>
   <body>
       <h1>Smarter JS</h1>
+      <script>
+        function popUp(message) {
+          alert(message)
+        } 
+      </script>
+      <a href="JavaScript:void(0)"onClick="popUp('Ouch! Stop it!');">An inline javascript link.</a>
   </body>
