--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
           alert(message)
         } 
       </script>
-      <a href="JavaScript:void(0)"onClick="popUp('Ouch! Stop it!');">An inline javascript link.</a>
+      <a href="JavaScript:void(0)"onClick="popUp('Ouch! Stop it!');">An inline javascript link.</a></br>
+      <input type="button" value="I'm a button!" onclick="alert('What!');">
   </body>
