--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
       </script>
       <a href="JavaScript:void(0)"onClick="popUp('Ouch! Stop it!');">An inline javascript link.</a></br>
       <input type="button" value="I'm a button!" onclick="alert('What!');">
+      <p onmouseover="this.style.color='green'" onmouseout="this.style.color='blue'">
+        The text should change green on mouse over.</p>
   </body>
