--- a/index.html
+++ b/index.html
@@ -15,4 +15,5 @@
       <input type="button" value="I'm a button!" onclick="alert('What!');">
       <p onmouseover="this.style.color='green'" onmouseout="this.style.color='blue'">
         The text should change green on mouse over.</p>
+      <input type="text" size="30" onfocus="this.style.backgroundColor='yellow'" onblur="this.style.backgroundColor='white'">
   </body>
