--- a/index.html
+++ b/index.html
@@ -15,5 +15,31 @@
       <input type="button" value="I'm a button!" onclick="alert('What!');">
       <p onmouseover="this.style.color='green'" onmouseout="this.style.color='blue'">
         The text should change green on mouse over.</p>
-      <input type="text" size="30" onfocus="this.style.backgroundColor='yellow'" onblur="this.style.backgroundColor='white'">
+      <input type="text" size="30" onfocus="this.style.backgroundColor='yellow'" onblur="this.style.backgroundColor='white'"><br>
+      <script>
+        function fillCity(){
+          var cityName;
+          var zipEntered = document.getElementById("zip").value;
+          switch(zipEntered){
+            case "56258":
+              cityName = "Marshall";
+              break;
+            case "56157":
+              cityName = "Lynd";
+              break;
+            case "56175":
+              cityName = "Tracy";
+              break;
+            default:
+              cityName = "Zion";
+              break;
+            }
+            document.getElementById("city").value = cityName;
+        }
+      </script>
+      <br>
+      <label>zip</label><br>
+      <input id="zip" type="text" size="30" onblur="fillCity();"><br>
+      <label>city</label><br>
+      <input id="city" type="text" size="30">
   </body>
