--- a/index.html
+++ b/index.html
@@ -80,4 +80,12 @@
         }
       </script>
       <input type="button" value="Big Font" onclick="plusFontSize()"></input>
+      <script>
+        function getURL() {
+          var hrefLoc = window.location.href;
+          var docUrl = document.URL;
+          alert("href = " + hrefLoc + " Document URL = " + docUrl);
+        }
+      </script>
+      <input type="button" value="Get URL" onclick="getURL()"></input>
   </body>
