--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
       <input type="button" value="Get URL" onclick="getURL()"></input>
       <script>
         function openWind() {
-          var monkeyDoc = document.write("<h1>Bang!<h1>")
-         var monkeyWindow = monkeyWindow.location.assign(monkeyDoc);
-         //window.open("https://kalevnakah.me");
+         //var monkeyWindow = monkeyWindow.location.assign(monkeyDoc);
+         var monkeyWindow = window.open("","monkey1","width=200,height=200,top=5,left=50");
+         monkeyWindow.document.write("<h1>Bang!<h1>");
         }
       </script>    
       <input type="button" onclick="openWind()" value="Open the wind"></input>
